@@ -100,3 +100,4 @@ Changelog for LabHelper project
 
     Cleaned up Message class
     Added MyEmitter class to handle crash when losing and regaining connection to the team drive.
+    Prevented duplicate messages when threads lose and gain connection
